--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ a svg:hover {
 .content {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: center;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.05);
